<resources>
    <string name="app_name">FunNews</string>
    <string name="app_intro">A pure reading App for you</string>

    <string name="drawer_group_content">资讯</string>
    <string name="drawer_group_options">选项</string>
    <string name="gank">干货集中营</string>
    <string name="zhihu">知乎</string>
    <string name="wechat">微信</string>
    <string name="drawer_collection">收藏</string>
    <string name="drawer_about">关于</string>
    <string name="drawer_setting">设置</string>
    <string name="drawer_open">打开</string>
    <string name="drawer_close">关闭</string>

    <string name="detail_bottom_share">分享</string>
    <string name="detail_bottom_like">点赞</string>
    <string name="detail_bottom_commit">评论</string>
    <string name="comment_expand">收起</string>

    <string name="action_copy">复制链接到剪贴板</string>
    <string name="action_save">保存到本地</string>
    <string name="action_share">分享链接</string>
    <string name="action_like">收藏</string>
    <string name="action_search">搜索</string>

    <string name="setting_cache">自动缓存</string>
    <string name="setting_image">无图模式</string>
    <string name="setting_night">夜间模式</string>
    <string name="setting_feedback">意见反馈</string>
    <string name="setting_clear">清除缓存</string>
    <string name="setting_update">检查更新</string>
    <string name="setting_normal">常规</string>
    <string name="setting_other">其他</string>

    <string name="about_author">作者:Yone(lsxgoole@gmail.com)</string>
    <string name="about_project">项目简介:\n知趣日报,一个纯粹的阅读App\n本着爱好学习，熟悉当前主流技术的意愿，开发了这一款集新闻、技术文章、福利于一身的阅读应用。
           该项目采用了Material Design设计风格、MVP架构以及Retrofit + RxJava网络请求框架等当前主流的开发技术，使得APP有更美观的界面和更稳定的性能。欢迎大家使用和提问题，谢谢！</string>
    <string name="about_info">FunNews\t\t\tV1.0.1</string>
</resources>
