<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/colorBackground"
              android:fitsSystemWindows="true"
              android:orientation="vertical">

       <TextView
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_margin="8dp"
           android:text="@string/setting_normal"/>

       <android.support.v7.widget.CardView
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:layout_margin="8dp"
           app:cardElevation="2dp"
           app:cardCornerRadius="3dp"
           android:background="#fff">

           <LinearLayout
               android:orientation="vertical"
               android:layout_width="match_parent"
               android:layout_height="wrap_content">

               <LinearLayout
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:orientation="horizontal"
                   android:padding="12dp"
                   android:gravity="center_vertical">

                   <ImageView
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:src="@mipmap/ic_cache"/>

                   <TextView
                       android:layout_width="0dp"
                       android:layout_height="wrap_content"
                       android:layout_weight="1"
                       android:layout_marginStart="12dp"
                       android:text="@string/setting_cache"/>

                   <android.support.v7.widget.AppCompatCheckBox
                       android:id="@+id/cb_setting_cache"
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:button="@drawable/abc_btn_check_material"
                       android:buttonTint="@color/colorAccent"
                       android:checked="true"/>

               </LinearLayout>

               <View
                   android:layout_width="match_parent"
                   android:layout_height="0.5dp"
                   android:background="@color/colorBackground"/>

               <LinearLayout
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:orientation="horizontal"
                   android:padding="12dp"
                   android:gravity="center_vertical">

                   <ImageView
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:src="@mipmap/ic_image"/>

                   <TextView
                       android:layout_width="0dp"
                       android:layout_height="wrap_content"
                       android:layout_weight="1"
                       android:layout_marginStart="12dp"
                       android:text="@string/setting_image"/>

                   <android.support.v7.widget.AppCompatCheckBox
                       android:id="@+id/cb_setting_image"
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:button="@drawable/abc_btn_check_material"
                       android:buttonTint="@color/colorAccent"/>

               </LinearLayout>

               <View
                   android:layout_width="match_parent"
                   android:layout_height="0.5dp"
                   android:background="@color/colorBackground"/>

               <LinearLayout
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:orientation="horizontal"
                   android:gravity="center_vertical"
                   android:padding="12dp">

                   <ImageView
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:src="@mipmap/ic_night"/>

                   <TextView
                       android:layout_width="0dp"
                       android:layout_height="wrap_content"
                       android:layout_weight="1"
                       android:text="@string/setting_night"
                       android:layout_marginStart="12dp"/>

                   <android.support.v7.widget.AppCompatCheckBox
                       android:id="@+id/cb_setting_night"
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:button="@drawable/abc_btn_check_material"
                       android:buttonTint="@color/colorAccent"/>

               </LinearLayout>

           </LinearLayout>

       </android.support.v7.widget.CardView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/setting_other"/>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        app:cardElevation="2dp"
        app:cardCornerRadius="3dp"
        android:background="#fff">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/ll_setting_feedback"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="12dp"
                android:gravity="center_vertical"
                android:foreground="?android:attr/selectableItemBackground">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@mipmap/ic_feedback"/>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginStart="12dp"
                    android:text="@string/setting_feedback"/>

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/colorBackground"/>

            <LinearLayout
                android:id="@+id/ll_setting_clear"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="12dp"
                android:gravity="center_vertical"
                android:foreground="?android:attr/selectableItemBackground">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@mipmap/ic_clear"/>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginStart="12dp"
                    android:text="@string/setting_clear"/>

                <TextView
                    android:id="@+id/tv_setting_clear"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="缓存大小：200kb"/>

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/colorBackground"/>

            <LinearLayout
                android:id="@+id/ll_setting_update"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="12dp"
                android:gravity="center_vertical"
                android:foreground="?android:attr/selectableItemBackground">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@mipmap/ic_update"/>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginStart="12dp"
                    android:text="@string/setting_update"/>

                <TextView
                    android:id="@+id/tv_setting_update"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="当前版本号:v1.0"/>

            </LinearLayout>

        </LinearLayout>
    </android.support.v7.widget.CardView>


</LinearLayout>